--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -8,10 +8,19 @@
   - [guest分页机制与EPT](#guest分页机制与ept)
     - [guest的分页模式](#guest的分页模式)
     - [引发GPA转换HPA](#引发gpa转换hpa)
-    - [guest分页机制下GPA到HGA的转换](#guest分页机制下gpa到hga的转换)
+    - [guest分页机制下GVA到HPA地址转换](#guest分页机制下gva到hpa地址转换)
 - [EPT页表结构](#ept页表结构)
 - [guest physical address](#guest-physical-address)
 - [EPTP](#eptp)
+  - [EP4TA 域](#ep4ta-域)
+- [4K 页面下的 EPT 页表结构](#4k-页面下的-ept-页表结构)
+- [2M 页面下的 EPT 页表结构](#2m-页面下的-ept-页表结构)
+- [1G 页面下的 EPT 页表结构](#1g-页面下的-ept-页表结构)
+- [EPT 导致的 VM-exit](#ept-导致的-vm-exit)
+- [accessed 与 dirty 标志位](#accessed-与-dirty-标志位)
+- [EPT 内存类型](#ept-内存类型)
+- [EPTP switching](#eptp-switching)
+- [实现 EPT 机制](#实现-ept-机制)
 
 <!-- /code_chunk_output -->
 
@@ -85,7 +94,7 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 总之, GPA可能是从`guest-linear address`转换而来, 或直接访问GPA(即并不是从guest linear address转换而来)
 
-### guest分页机制下GPA到HGA的转换
+### guest分页机制下GVA到HPA地址转换
 
 **分页机制**下, 完成整个**guest访问内存**操作会引发一系列**GPA转换HPA**过程.
 
@@ -93,21 +102,23 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 ![config](./images/2.png)
 
-完成这个内存访问操作一共需要5次GPA到HPA的转换(N=MAXPHYADDR)
+注: 图中是guest linear address转换成最终的HPA
 
-(1) **CR3寄存器**的`bits N-1:12`提供PML4T基址. 定位PML4T时需对PML4T基址进行GPA转换(图中第1步). 成功转换HPA后得到**PML4T的物理地址(其实就是地址拼凑！！！**), 再由PML4E index查找PML4E(图中A点)
+完成这个内存访问操作一共需要**5次GPA到HPA的转换**(N=MAXPHYADDR)
 
-(2) PML4E的bits N\-1:12提供PDPT基址. 在定位PDPT时需要对PDPT基址进行GPA转换(第二步). 成功转换HPA后得到PDPT的物理地址, 再由PDPTE index查找PDPTE(B点)
+(1) **CR3寄存器**的`bits N-1:12`提供**PML4T基址**. 定位 PML4T 时需对 PML4T 基址进行GPA转换(图中第1步). 成功转换HPA后得到**PML4T的物理地址**, 再由PML4E index查找PML4E(图中A点)
 
-(3) PDPTE的bits N\-1:12提供PDT基址. 定位PDT时需要对PDT基址进行GPA转换(第3步). 成功转换HPA后得到PDT的物理地址, 再由PDE index查找PDE(C点)
+(2) PML4E的`bits N-1:12`提供PDPT基址. 在定位PDPT时需要对PDPT基址进行GPA转换(第二步). 成功转换HPA后得到PDPT的物理地址, 再由PDPTE index查找PDPTE(B点)
 
-(4) PDE的bits N\-1:12提供PT基址. 定位PT时需要对PT基址进行GPA转换(第4步). 成功转换HPA后得到PT的物理地址, 再由PTE index查找PTE(D点)
+(3) PDPTE的`bits N-1:12`提供PDT基址. 定位PDT时需要对PDT基址进行GPA转换(第3步). 成功转换HPA后得到PDT的物理地址, 再由PDE index查找PDE(C点)
 
-(5) PTE的bits N\-1:12提供4KB page frame基址. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到目标GPA值(E点). 处理器将这个GPA转换成HPA得到最终物理地址(第5步), 从而完成guest内存的访问.
+(4) PDE的`bits N-1:12`提供PT基址. 定位PT时需要对PT基址进行GPA转换(第4步). 成功转换HPA后得到PT的物理地址, 再由PTE index查找PTE(D点)
+
+(5) PTE的`bits N-1:12`提供4KB page frame基址. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到目标GPA值(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
 
 这整个过程中, 任何一个环节都可能会发生**EPT violation**或**EPT misconfiguration**而导致**VM\-Exit发生**(见6.1.8)
 
-也可能由于**guest paging structure**而引发**guest产生\#PF异常**, 从而使**guest处理\#PF异常处理程序**或由于\#PF异常**直接或间接导致VM\-exit**.
+也可能由于**guest paging structure**而引发**guest产生\#PF异常**, 从而使**guest处理\#PF异常处理程序**或由于`#PF异常`**直接或间接导致VM\-exit**.
 
 # EPT页表结构
 
@@ -132,3 +143,43 @@ EPT支持三种页面
 # EPTP
 
 EPT 页表结构顶层的 PML4T 物理地址由 EPTP(Extended Page Table Pointer, 扩展页表指针)
+
+## EP4TA 域
+
+
+
+
+# 4K 页面下的 EPT 页表结构
+
+
+
+![2020-02-24-23-32-30.png](./images/2020-02-24-23-32-30.png)
+
+
+
+
+# 2M 页面下的 EPT 页表结构
+
+
+
+# 1G 页面下的 EPT 页表结构
+
+
+
+# EPT 导致的 VM-exit
+
+
+
+# accessed 与 dirty 标志位
+
+
+
+# EPT 内存类型
+
+
+
+# EPTP switching
+
+
+
+# 实现 EPT 机制
