--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -134,7 +134,7 @@ EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构
 
 软件可以查询IA32\_VMX\_EPT\_VPID\_CAP寄存器的bit 6来确定是否支持4级页表结构, 为1时EPT支持,. 每个EPT页表大小是4KB, 每个EPT页表项为64位宽.
 
-EPT支持三种页面
+EPT支持三种页面(见 2.5.13)
 
 # guest physical address
 
