--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -125,3 +125,12 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 
 # 14. VPID 与 EPT 能力
+
+`IA32_VMX_EPT_VPID_CAP`寄存器提供两方面的能力检测, 包括 EPT(扩展页表)所支持的能力, 以及 EPT 页面 cache(TLBs及paging-structure cache)的能力.
+
+.... .
+
+如图 2-11 是 `IA32_VMX_EPT_VPID_CAP`寄存器的结构.
+
+![2020-02-24-23-39-43.png](./images/2020-02-24-23-39-43.png)
+
