--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -132,9 +132,19 @@ EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构
 
 (4) EPT PT(`EPT Page Table`), 表项是EPT PTE.
 
-软件可以查询IA32\_VMX\_EPT\_VPID\_CAP寄存器的bit 6来确定是否支持4级页表结构, 为1时EPT支持,. 每个EPT页表大小是4KB, 每个EPT页表项为64位宽.
+软件可以查询`IA32_VMX_EPT_VPID_CAP`寄存器的bit 6来确定**是否支持4级页表结构**, 为1时EPT支持4级页表结构. 每个EPT页表大小是4KB, 每个EPT页表项为64位宽.
 
 EPT支持三种页面(见 2.5.13)
+
+- 1G 页面, 当`IA32_VMX_EPT_VPID_CAP[17] = 1`时处理器支持 1G 页面. PDPTE 的 bit 7 允许置 1 使用 1G 页面.
+- 2M 页面, 当`IA32_VMX_EPT_VPID_CAP[16] = 1`时处理器支持 2M 页面. PDE 的 bit 7 允许置 1 使用 2M 页面.
+- 4K 页面, 当`PDPTE[7] = PDE[7] = 0`时使用 4K 页面. PTE 提供 4K 物理页面地址.
+
+使用 1G 页面时, GPA 转换只需要经过两级 EPT 页表的 walk 流程(PML4T与PDPT). 
+
+使用 2M 页面时, GPA 转换需经过三级 EPT 页表的 walk 流程(PML4T、PDPT及PDT).
+
+使用 4K 页面时, GPA 转换需经过四级 EPT 页表的 walk 流程(类似图6-2).
 
 # guest physical address
 
