--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -38,14 +38,14 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 当"`enable EPT`"位为1, 表明**开启了EPT机制**. 在该机制下, 引出了**两个物理地址**概念.
 
-- GPA: guest所有访问的物理地址都是GPA
-- HPA: 平台最终的物理地址. GPA必须转换成HPA才能访问真实的物理地址.
+- **GPA**: guest所有访问的物理地址都是GPA
+- **HPA**: 平台最终的物理地址. GPA必须转换成HPA才能访问真实的物理地址.
 
 **VMM**中**没有**这两个概念, 但**VMM访问的物理地址**可以被视为**HPA**. 
 
 在**开启EPT机制**后**VMM**需要建立**EPT页表**结构, 通过在 **EPTP**(`Extended Page Table Pointer`)字段中提供**EPT页表结构**的**指针值**, 为**每个VM**准备**不同的EPT页表结构**, 或在**同一个EPT页表**结构中准备**不同的页表项**.
 
-当"unrestricted guest"位为1, "enable EPT"位必须为1(见4.4.1.3), 说明guest运行在**实模式**时必须**启用EPT机制**. 同时, 当处理器**支持unrestricted guest功能**时, 也**必定支持EPT机制**.
+当"`unrestricted guest`"位为1, "enable EPT"位必须为1(见4.4.1.3), 说明guest运行在**实模式**时必须**启用EPT机制**. 同时, 当处理器**支持unrestricted guest功能**时, 也**必定支持EPT机制**.
 
 ## guest分页机制与EPT
 
