--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -126,7 +126,7 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 # 14. VPID 与 EPT 能力
 
-`IA32_VMX_EPT_VPID_CAP`寄存器提供两方面的能力检测, 包括 EPT(扩展页表)所支持的能力, 以及 EPT 页面 cache(TLBs及paging-structure cache)的能力.
+`IA32_VMX_EPT_VPID_CAP`寄存器提供**两方面**的能力检测, 包括 **EPT**(扩展页表)所支持的能力, 以及 EPT 页面 cache(TLBs及`paging-structure cache`)的能力.
 
 .... .
 
