--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -128,6 +128,11 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 `IA32_VMX_EPT_VPID_CAP`寄存器提供**两方面**的能力检测, 包括 **EPT**(扩展页表)所支持的能力, 以及 EPT 页面 cache(TLBs及`paging-structure cache`)的能力.
 
+当下面的条件满足时, 才支持 `IA32_VMX_EPT_VPID_CAP` 寄存器.
+
+(1) `CPUID.01H:ECX[5]=1`, 表明支持 VMX 架构.
+
+(2) `IA32_VMC
 .... .
 
 如图 2-11 是 `IA32_VMX_EPT_VPID_CAP`寄存器的结构.
