--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -130,9 +130,12 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 当下面的条件满足时, 才支持 `IA32_VMX_EPT_VPID_CAP` 寄存器.
 
-(1) `CPUID.01H:ECX[5]=1`, 表明支持 VMX 架构.
+(1) `CPUID.01H:ECX[5]=1`, 表明支持 **VMX** 架构.
 
-(2) `IA32_VMC
+(2) `IA32_VMX_PROCBASED_CTLS[63]=1`, 表明支持 `IA32_VMX_PROCBASED_CTLS2` 寄存器.
+
+(3) `IA32_VMX_PROCBASED_CTLS2[33]=1`, 表明支持 
+
 .... .
 
 如图 2-11 是 `IA32_VMX_EPT_VPID_CAP`寄存器的结构.
