--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -142,4 +142,8 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 对于 EPT 能力, bit 0 为 1 时, 允许在 EPT 页表表项里的 `bits 2:0` 使用 100b(execute-only页)属性. bit 6为 1 时, 表明支持 4 级页表结构. bit 16为1时支持使用 2M 页, bit 17为1时支持使用 1G 页. 最后, bit 21 为 1 时支持在页表项里使用 dirty 标志.
 
-bit 8为 1 时, 允许在 EPTP 字段的 bits 2:0 里设为UC类型(值为0), 而bit 14为1时, 允许在 EPTP 的
+bit 8为 1 时, 允许在 EPTP 字段的 bits 2:0 里设为UC类型(值为0), 而bit 14为1时, 允许在 EPTP 的bits 2:0 里设置为WB类型(值为6). 见4.4.1.3
+
+对于 EPT cache的能力, bit 20 为 1 时支持INVEPT指令, bit 32为 1 时支持INVVPID指令. INVEPT指令支持的刷新类型由 bit 25 和 bit 26 检测. bit 25为1时, 支持 single-context 刷新类型, bit 26为 1时, 支持all-context刷新类型.
+
+INVVPID指令支持的刷新类型由bits 43:40检测. bit 40为1时, 支持 individual-address 类型(type值为0). bit 41为1时, 支持single-context类型(type值为1). bit 42为1时, 支持 all-context类型(type值为2). bit 43为1时, 支持single-context-retaining-globals类型(type值为3).
