--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -49,7 +49,7 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 ## guest分页机制与EPT
 
-**实模式**下不使用分页机制, guest访问使用的linear address(**线性地址**)就是**物理地址**(也是`guest-physical address`).
+**实模式**下**不使用分页机制**, guest访问使用的linear address(**线性地址**)就是**物理地址**(也是`guest-physical address`).
 
 当`CR0.PG=1`时**guest**启用**分页**, `guest-linear address`(guest线性地址)通过页表结构转换成**物理地址**. 
 
