--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -70,9 +70,9 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 x64 体系上有三种分页模式(`CR0.PG=1`)
 
-(1) 当 `CR4.PAE=-`
+(1) 当 `CR4.PAE=0`时, guest使用32位分页模式. 另外, 当`CR4.PSE=1`, 并且 MAXPHYADDR 值大于等于 40 时, 允许在 4M 页面上使用40位的物理地址.
 
-(2)
+(2) 
 
 (3)
 
@@ -90,7 +90,7 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 (3) 在`guest-linear address`转换为`guest-physical address`过程中, 处理器访问`guest paging structure`**表项**内的地址, 它们属于GPA(例如PDPTE内的地址值)
 
-总之, GPA可能是从`guest-linear address`转换而来, 或直接访问GPA(即并不是从guest linear address转换而来)
+总之, GPA可能是从`guest-linear address`转换而来, 或**直接访问GPA**(即并不是从guest linear address转换而来)
 
 ### 2.1.3. guest分页机制下GVA到HPA地址转换
 
@@ -112,7 +112,7 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 (4) PDE的`bits N-1:12`提供PT基址. 定位PT时需要对PT基址进行GPA转换(第4步). 成功转换HPA后得到PT的物理地址, 再由PTE index查找PTE(D点)
 
-(5) PTE的`bits N-1:12`提供4KB page frame基址. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到目标GPA值(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
+(5) PTE的`bits N-1:12`提供4KB page frame基址. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到**目标GPA值**(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
 
 这整个过程中, 任何一个环节都可能会发生**EPT violation**或**EPT misconfiguration**而导致**VM\-Exit发生**(见6.1.8)
 
