--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -118,6 +118,11 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 也可能由于**guest paging structure**而引发**guest产生\#PF异常**, 从而使**guest处理\#PF异常处理程序**或由于`#PF异常`**直接或间接导致VM\-exit**.
 
+举一反三, 我们可以得到:
+
+- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即CR3寄存器
+- 当 guest 使用 PAE 分页模式时, guest 的内存访问
+
 # 3. EPT页表结构
 
 EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构)的实现类似. VMX架构实现最高4级EPT页表结构, 分别是:
