--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -120,8 +120,8 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 举一反三, 我们可以得到:
 
-- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即CR3寄存器
-- 当 guest 使用 PAE 分页模式时, guest 的内存访问
+- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即CR3寄存器内的 PDT 基址需要进行GPA转换
+- 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 3 次GPA转换. 
 
 # 3. EPT页表结构
 
