--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -70,11 +70,11 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 x64 体系上有三种分页模式(`CR0.PG=1`)
 
-(1) 当 `CR4.PAE=0`时, guest使用32位分页模式. 另外, 当`CR4.PSE=1`, 并且 MAXPHYADDR 值大于等于 40 时, 允许在 4M 页面上使用40位的物理地址.
+(1) 当 `CR4.PAE=0`时, guest使用**32位分页模式**. 另外, 当`CR4.PSE=1`, 并且 MAXPHYADDR 值大于等于 40 时, 允许在 4M 页面上使用40位的物理地址.
 
-(2) 
+(2) 当 `IA32_EFER.LMA=0`, 并且 `CR4.PAE=1`时, guest使用 PAE 分页模式.
 
-(3)
+(3) 当 `IA32_EFER.LMA=1`, 并且 
 
 guest的线性地址根据上面的分页模式转换成 guest physical address. 当guest使用PAE分页模式, 并且启用了EPT机制时, 在 VM-entry 时会加载 4 个 PDPTE字段(参见4.7.7与4.5.11).
 
@@ -106,13 +106,13 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 (1) **CR3寄存器**的`bits N-1:12`提供**PML4T基址**. 定位 PML4T 时需对 PML4T 基址进行GPA转换(图中第1步). 成功转换HPA后得到**PML4T的物理地址**, 再由PML4E index查找PML4E(图中A点)
 
-(2) PML4E的`bits N-1:12`提供PDPT基址. 在定位PDPT时需要对PDPT基址进行GPA转换(第二步). 成功转换HPA后得到PDPT的物理地址, 再由PDPTE index查找PDPTE(B点)
+(2) **PML4E**的`bits N-1:12`提供**PDPT基址**. 在定位PDPT时需要对PDPT基址进行GPA转换(第二步). 成功转换HPA后得到PDPT的物理地址, 再由PDPTE index查找PDPTE(B点)
 
-(3) PDPTE的`bits N-1:12`提供PDT基址. 定位PDT时需要对PDT基址进行GPA转换(第3步). 成功转换HPA后得到PDT的物理地址, 再由PDE index查找PDE(C点)
+(3) **PDPTE**的`bits N-1:12`提供**PDT基址**. 定位PDT时需要对PDT基址进行GPA转换(第3步). 成功转换HPA后得到PDT的物理地址, 再由PDE index查找PDE(C点)
 
-(4) PDE的`bits N-1:12`提供PT基址. 定位PT时需要对PT基址进行GPA转换(第4步). 成功转换HPA后得到PT的物理地址, 再由PTE index查找PTE(D点)
+(4) **PDE**的`bits N-1:12`提供**PT基址**. 定位PT时需要对PT基址进行GPA转换(第4步). 成功转换HPA后得到PT的物理地址, 再由PTE index查找PTE(D点)
 
-(5) PTE的`bits N-1:12`提供4KB page frame基址. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到**目标GPA值**(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
+(5) **PTE**的`bits N-1:12`提供**4KB page frame基址**. 这个page frame基址加上guest\-linear address的offset值(bits 11:0)得到**目标GPA值**(E点). 处理器将这个GPA转换成**HPA**得到**最终物理地址**(第5步), 从而完成guest内存的访问.
 
 这整个过程中, 任何一个环节都可能会发生**EPT violation**或**EPT misconfiguration**而导致**VM\-Exit发生**(见6.1.8)
 
@@ -120,8 +120,10 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 举一反三, 我们可以得到:
 
-- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即CR3寄存器内的 PDT 基址需要进行GPA转换
-- 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 3 次GPA转换. 
+- 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即**CR3寄存器**内的 **PDT 基址**需要进行GPA转换, PDE 内的 PT 基址需要进行 GPA 转换, 以及合成的 GPA 需要进行转换.
+- 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 3 次GPA转换. 即
+
+在 PAE 分页模式下, 
 
 # 3. EPT页表结构
 
