--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -74,7 +74,7 @@ x64 体系上有三种分页模式(`CR0.PG=1`)
 
 (2) 当 `IA32_EFER.LMA=0`, 并且 `CR4.PAE=1`时, guest使用 PAE 分页模式.
 
-(3) 当 `IA32_EFER.LMA=1`, 并且 
+(3) 当 `IA32_EFER.LMA=1`, 并且 `CR4.PAE=1`时, guest使用 IA-32e 分页模式.
 
 guest的线性地址根据上面的分页模式转换成 guest physical address. 当guest使用PAE分页模式, 并且启用了EPT机制时, 在 VM-entry 时会加载 4 个 PDPTE字段(参见4.7.7与4.5.11).
 
@@ -123,7 +123,7 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 - 当 guest 使用 32 位分页模式时, guest的内存访问操作需要进行 3 次GPA转换. 即**CR3寄存器**内的 **PDT 基址**需要进行GPA转换, PDE 内的 PT 基址需要进行 GPA 转换, 以及合成的 GPA 需要进行转换.
 - 当 guest 使用 PAE 分页模式时, guest 的内存访问操作需要进行 3 次GPA转换. 即
 
-在 PAE 分页模式下, 
+在 PAE 分页模式下, guest 执行 MOV to CR3 指令**更新 CR3 寄存器**(也包括更新 CR0 或 CR4 寄存器某些控制位)引发对 **PDPTE 的加载**. 因此, 在加载 PDPTE 表项时也会进行 GPA 的转换.
 
 # 3. EPT页表结构
 
@@ -157,7 +157,7 @@ EPT支持三种页面(见 2.5.13)
 
 # 5. EPTP
 
-EPT 页表结构顶层的 PML4T 物理地址由 EPTP(Extended Page Table Pointer, 扩展页表指针)
+EPT 页表结构**顶层**的 **PML4T 物理地址**由 EPTP(Extended Page Table Pointer, 扩展页表指针)字段提供(见3.5.17). PML4T的物理地址也被称为 "EP4TA" (`EPTP[N-1:12]`), 它用于标识一个cache域. 注意, 这个物理地址属于
 
 ## 5.1. EP4TA 域
 
