--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -164,7 +164,9 @@ EPT 页表结构**顶层**的 **PML4T 物理地址**由 EPTP(Extended Page Table
 - PML4T 的物理地址(host physical address)值由 EPTP 字段的 `bit N-1:12`提供(N=MAXPHYADDR). 例如, 当 MAXPHYADDR = 36 时, EPTP 的 bits 35:12 是PML4T 地址值, bits 63:36 是保留位.
 - bits
 
-当 "enable EPT" 为 1 时, EPTP 值在 VM-entry 时从EPTP字段里加载, 记录在处理器内部寄存器中
+当 "enable EPT" 为 1 时, EPTP 值在 VM-entry 时从EPTP字段里加载, 记录在处理器内部寄存器中(推测). EPTP字段的设置必须符合设置要求(见4.4.1.3).
+
+注: `EPTP[2:0]`所指定的内存类型, 使用在 EPT paging structure(EPT的页表结构)数据本身中. 它属于
 
 ## 5.1. EP4TA 域
 
@@ -173,7 +175,11 @@ EPT 页表结构**顶层**的 **PML4T 物理地址**由 EPTP(Extended Page Table
 
 # 6. 4K 页面下的 EPT 页表结构
 
+在 4K 页面下, guest physical address被分割为下面的部分.
 
+(1)
+
+guest physical address的`bits 63:48` 被忽略(见6.1.3). **GPA**转换到**HPA**需要经过 4 级 EPT 页表结构(walk 次数为 4), 如图6-4.
 
 ![2020-02-24-23-32-30.png](./images/2020-02-24-23-32-30.png)
 
