--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
@@ -4,6 +4,8 @@ VMCS区域需要**对齐在4K边界**上. VMCS区域的大小由`IA32_VMX_BASIC[
 
 `IA32_VMX_BASIC[53:50]`域报告了VMCS区域支持的**cache类型**, 支持UC与WB类型.
 
-执行 VMCLEAR 与 VMPTRLD 指令时, 需要提供目标
+执行 **VMCLEAR** 与 **VMPTRLD** 指令时, 需要提供**目标 VMCS 区域**的**物理指针**作为操作数. 而 VMREAD、VMWRITE、VMLAUNCH、VMRESUME 及 VMPTRST 指令隐式地使用 current-VMCS pointer 作为目标 VMCS 指针.
+
+前面提到, 
 
 ![2020-02-23-23-03-54.png](./images/2020-02-23-23-03-54.png)
