--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
@@ -8,4 +8,12 @@ VMCS区域需要**对齐在4K边界**上. VMCS区域的大小由`IA32_VMX_BASIC[
 
 前面提到, 使用 **VMCLEAR** 指令对 `current-VMCS` 指针进行**初始化**时, `current-VMCS` 指针值变成 `FFFFFFFF_FFFFFFFFh`. 这时, 执行上面隐式使用 `current-VMCS pointer`的指令, 会产生 VMfailInvalid 失败.
 
+# VMXON 区域
+
+
+
+# Executive-VMCS 与 SMM-transfer VMCS
+
+在 SMM 双重监控处理机制下, 还有两类 VMCS, 分别是: Executive-VMCS 与 SMM transfer VMCS. Executive-VMCS 对应 VMM 在 VMX operation 模式(包括 root 与 non-root )下的 VMCS, 而 SMM-transfer VMCS 对应 VMM 进入
+
 ![2020-02-23-23-03-54.png](./images/2020-02-23-23-03-54.png)
