--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
@@ -14,6 +14,16 @@ VMCS区域需要**对齐在4K边界**上. VMCS区域的大小由`IA32_VMX_BASIC[
 
 # Executive-VMCS 与 SMM-transfer VMCS
 
-在 SMM 双重监控处理机制下, 还有两类 VMCS, 分别是: Executive-VMCS 与 SMM transfer VMCS. Executive-VMCS 对应 VMM 在 VMX operation 模式(包括 root 与 non-root )下的 VMCS, 而 SMM-transfer VMCS 对应 VMM 进入
+在 SMM 双重监控处理机制下, 还有两类 VMCS, 分别是: Executive-VMCS 与 SMM transfer VMCS. Executive-VMCS 对应 VMM 在 VMX operation 模式(包括 root 与 non-root )下的 VMCS, 而 SMM-transfer VMCS 对应 VMM 进入 SMM 模式时使用的 VMCS .
+
+
+
+# VMCS 区域格式
+
+VMCS 区域寄存在物理地址空间, 有一个 8 字节的头部和 VMCS 数据区域, 如图 3-1 所示.
+
+![2020-02-25-17-00-58.png](./images/2020-02-25-17-00-58.png)
 
 ![2020-02-23-23-03-54.png](./images/2020-02-23-23-03-54.png)
+
+VMCS 的首 DWORD 值是 VMCS ID, 这个 VMCS ID 值需要在初始化 VMCS 区域时写入, 必须等于 `IA32_VMX_BASIC[31:0]` 值(见2.5.4). 注意, VMXON 区域的首 DWORD 值
