--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
@@ -1,2 +1,3 @@
 
-VMCS 数据区内的字段与处理器实现相关. 在不同架构下的处理器中, 
+VMCS 数据区内的字段与处理器实现相关. 在不同架构下的处理器中, 这些 VMCS 字段位置可能会不一致. 并且, 在一些较早的处理器中也不支持 VMX 架构提出的新特性, 导致在这些早期的处理器中某些字段是不存在的.
+
