--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
@@ -7,4 +7,12 @@
 
 (2) 使用 MOV 指令对 VMCS 区域进行读写, 可能会读写到一些不正确的字段值, 从而可能导致不可预测的结果发生.
 
-软件必须通过 VMREAD 与 VMWRITE 指令来访问 VMCS 字段. 每个
+软件必须通过 VMREAD 与 VMWRITE 指令来访问 VMCS 字段. 每个字段定义一个唯一的 ID 值累对应, 这个字段 ID 值提供给 VMREAD 与 VMWRITE 指令作为index值来访问相应的字段.
+
+# 字段 ID 格式
+
+字段 ID 值是 32 位的, 它有几个域组成, 如图 3-2 所示.
+
+![2020-02-25-20-43-06.png](./images/2020-02-25-20-43-06.png)
+
+bit 0 指示访问的类型, 为 0 时使用 full 类型, 为 1 时
