--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
@@ -15,4 +15,6 @@
 
 ![2020-02-25-20-43-06.png](./images/2020-02-25-20-43-06.png)
 
-bit 0 指示访问的类型, 为 0 时使用 full 类型, 为 1 时
+bit 0 指示访问的类型, 为 0 时使用 **full** 类型, 为 1 时使用 **high** 类型访问 64 位字段的**高 32 位**. 除了 64 位字段外, 其他宽度字段都是 full 类型. `Bits 9:1` 是 VMCS 字段的 index 值.
+
+`bits 11:10`
