--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
@@ -10,15 +10,28 @@
 
 ![2020-02-25-21-07-49.png](./images/2020-02-25-21-07-49.png)
 
-这些字段 ID 值的 bits 14:13 为 0(16位).
+这些字段 ID 值的 `bits 14:13` 为 0(16位).
 
-bits 11:10 是类型值, 包含了三类16位字段: 
+`bits 11:10` 是类型值, 包含了三类16位字段: 
 
-- 控制
+- 控制字段(类型为0)
+- guest-state字段(类型为2)
+- host-state字段(类型为3)
 
 # 64 位字段 ID
 
+![2020-02-25-21-16-54.png](./images/2020-02-25-21-16-54.png)
 
+![2020-02-25-21-17-15.png](./images/2020-02-25-21-17-15.png)
+
+64 位字段 ID 值 的 `bits 14:13` 值为1.
+
+bits 11:10 的类型值包含 4 类:
+
+- 控制字段(类型为0)
+- 只读字段(类型为1)
+- guest-state字段(类型为2)
+- host-state字段(类型为3)
 
 # 32 位字段 ID
 
