--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
@@ -15,17 +15,24 @@
 
 ![2020-02-25-20-43-06.png](./images/2020-02-25-20-43-06.png)
 
-`bit 0` 指示访问的类型, 为 0 时使用 **full** 类型, 为 1 时使用 **high** 类型访问 64 位字段的**高 32 位**. 除了 64 位字段外, 其他宽度字段都是 full 类型. 
+`bit 0` 指示**访问的类型**, 为 0 时使用 **full** 类型, 为 1 时使用 **high** 类型访问 64 位字段的**高 32 位**. 除了 64 位字段外, 其他宽度字段都是 full 类型. 
 
-`Bits 9:1` 是 VMCS 字段的 index 值.
+`bits 9:1` 是 VMCS 字段的 **index** 值.
 
-`bits 11:10` 指示字段的类型, 包括下面的值.
+`bits 11:10` 指示**字段的类型**, 包括下面的值.
 
-- 
-- 
+- 0: 属于控制区域内的字段. 包含 VM-execution 控制字段, VM-exit控制字段以及 VM-entry 控制字段.
+- 1: 属于只读类型的字段. 典型的比如 VM-exit 信息域.
+- 2: 属于 guest-state 字段.
+- 3: 属于 host-state 字段
 
-`bits 14:13` 指示字段的宽度, 包括:
+`bits 14:13` 指示**字段的宽度**, 包括:
 
 - 0: 16位
 - 1: 64位
-- 2: 
+- 2: 32位
+- 3: `natural-width`字段
+
+`natural-width` 字段在支持 **64 位架构**的处理器中为 **64 位**, 在不支持 64 位架构的处理器中为 **32 位**. 其他几类则属于固定宽度, 不会改变.
+
+注意: 固定为 64 位的字段对应着两个字段 ID 值, 分别是 full 类型字段与 high 类型字段. 例如, guest-state 区域内的 IA32_EFER 字段是 64 位字段, 它对应如下两个
