--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/3. 访问 VMCS 字段.md
@@ -36,3 +36,8 @@
 `natural-width` 字段在支持 **64 位架构**的处理器中为 **64 位**, 在不支持 64 位架构的处理器中为 **32 位**. 其他几类则属于固定宽度, 不会改变.
 
 注意: 固定为 64 位的字段对应着两个字段 ID 值, 分别是 full 类型字段与 high 类型字段. 例如, guest-state 区域内的 IA32_EFER 字段是 64 位字段, 它对应如下两个
+
+
+
+# 不同宽度的字段处理
+
