--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/2. 设备直接分配(VT-d).md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/2. 设备直接分配(VT-d).md
@@ -4,44 +4,44 @@
 
 <!-- code_chunk_output -->
 
-* [1 VT\-d概述](#1-vt-d概述)
-	* [1.1 3种客户机设备类型](#11-3种客户机设备类型)
-	* [1.2 VT\-d的硬件支持和软件使用](#12-vt-d的硬件支持和软件使用)
-	* [1.3 VT\-d的3个缺点和解决方案](#13-vt-d的3个缺点和解决方案)
-* [2 VFIO简介](#2-vfio简介)
-	* [2.1 VFIO相对于pci\-stub的改进](#21-vfio相对于pci-stub的改进)
-* [3 VT\-d环境配置](#3-vt-d环境配置)
-	* [3.1 硬件支持和BIOS设置](#31-硬件支持和bios设置)
-	* [3.2 宿主机内核的配置](#32-宿主机内核的配置)
-		* [3.2.1 VT\-d相关内核编译选项以及启动参数](#321-vt-d相关内核编译选项以及启动参数)
-		* [3.2.2 VFIO相关内核编译选项](#322-vfio相关内核编译选项)
-		* [3.2.3 系统检查](#323-系统检查)
-	* [3.3 在宿主机中隐藏设备](#33-在宿主机中隐藏设备)
-	* [3.4 通过QEMU命令行分配设备给客户机](#34-通过qemu命令行分配设备给客户机)
-* [4 VT\-d操作示例](#4-vt-d操作示例)
-	* [4.1 网卡直接分配](#41-网卡直接分配)
-	* [4.2 硬盘控制器直接分配](#42-硬盘控制器直接分配)
-	* [4.3 USB控制器直接分配](#43-usb控制器直接分配)
-	* [4.4 VGA显卡直接分配](#44-vga显卡直接分配)
-* [5 SR\-IOV技术](#5-sr-iov技术)
-	* [5.1 SR\-IOV概述](#51-sr-iov概述)
-		* [5.1.1 SRIOV原理](#511-sriov原理)
-		* [5.1.1 SRIOV的硬件和软件支持](#511-sriov的硬件和软件支持)
-		* [5.1.2 PF生成VF的两种方式](#512-pf生成vf的两种方式)
-			* [5.1.2.1 sysfs动态生成](#5121-sysfs动态生成)
-			* [5.1.2.2 PF驱动加载参数](#5122-pf驱动加载参数)
-		* [5.1.3 SR\-IOV的优缺点](#513-sr-iov的优缺点)
-	* [5.2 SR\-IOV操作示例](#52-sr-iov操作示例)
-	* [5.3 SR\-IOV使用问题解析](#53-sr-iov使用问题解析)
-		* [5.3.1 VF在客户机中MAC地址全为零](#531-vf在客户机中mac地址全为零)
-		* [5.3.2 Windows客户机中关于VF的驱动程序](#532-windows客户机中关于vf的驱动程序)
-		* [5.3.3 少数网卡的VF在少数Windows客户机中不工作](#533-少数网卡的vf在少数windows客户机中不工作)
+- [VT-d概述](#vt-d概述)
+  - [3种客户机设备类型](#3种客户机设备类型)
+  - [VT-d的硬件支持和软件使用](#vt-d的硬件支持和软件使用)
+  - [VT-d的3个缺点和解决方案](#vt-d的3个缺点和解决方案)
+- [VFIO简介](#vfio简介)
+  - [VFIO相对于pci-stub的改进](#vfio相对于pci-stub的改进)
+- [VT-d环境配置](#vt-d环境配置)
+  - [硬件支持和BIOS设置](#硬件支持和bios设置)
+  - [宿主机内核的配置](#宿主机内核的配置)
+    - [VT-d相关内核编译选项以及启动参数](#vt-d相关内核编译选项以及启动参数)
+    - [VFIO相关内核编译选项](#vfio相关内核编译选项)
+    - [系统检查](#系统检查)
+  - [在宿主机中隐藏设备](#在宿主机中隐藏设备)
+  - [3.4 通过QEMU命令行分配设备给客户机](#34-通过qemu命令行分配设备给客户机)
+- [4 VT-d操作示例](#4-vt-d操作示例)
+  - [4.1 网卡直接分配](#41-网卡直接分配)
+  - [4.2 硬盘控制器直接分配](#42-硬盘控制器直接分配)
+  - [4.3 USB控制器直接分配](#43-usb控制器直接分配)
+  - [4.4 VGA显卡直接分配](#44-vga显卡直接分配)
+- [5 SR\-IOV技术](#5-sr-iov技术)
+  - [5.1 SR\-IOV概述](#51-sr-iov概述)
+    - [5.1.1 SRIOV原理](#511-sriov原理)
+    - [5.1.1 SRIOV的硬件和软件支持](#511-sriov的硬件和软件支持)
+    - [5.1.2 PF生成VF的两种方式](#512-pf生成vf的两种方式)
+      - [5.1.2.1 sysfs动态生成](#5121-sysfs动态生成)
+      - [5.1.2.2 PF驱动加载参数](#5122-pf驱动加载参数)
+    - [5.1.3 SR\-IOV的优缺点](#513-sr-iov的优缺点)
+  - [5.2 SR\-IOV操作示例](#52-sr-iov操作示例)
+  - [5.3 SR\-IOV使用问题解析](#53-sr-iov使用问题解析)
+    - [5.3.1 VF在客户机中MAC地址全为零](#531-vf在客户机中mac地址全为零)
+    - [5.3.2 Windows客户机中关于VF的驱动程序](#532-windows客户机中关于vf的驱动程序)
+    - [5.3.3 少数网卡的VF在少数Windows客户机中不工作](#533-少数网卡的vf在少数windows客户机中不工作)
 
 <!-- /code_chunk_output -->
 
-# 1 VT\-d概述
+# VT-d概述
 
-## 1.1 3种客户机设备类型
+## 3种客户机设备类型
 
 在QEMU/KVM中，**客户机可以使用的设备**大致可分为如下**3种类型**。
 
@@ -57,7 +57,7 @@
 
 **PCI设备直接分配**（Device Assignment，或PCI pass\-through），它允许将宿主机中的物理PCI（或PCI\-E）设备直接分配给客户机完全使用，这正是本节要介绍的重点内容。兼具**高性能**和**高兼容性**.
 
-## 1.2 VT\-d的硬件支持和软件使用
+## VT-d的硬件支持和软件使用
 
 较新的**x86架构**的主要硬件平台（包括服务器级、桌面级）都已经支持设备直接分配，其中**Intel**定义的I/O虚拟化技术规范为“Intel(R)Virtualization Technology for Directed I/O”（**VT\-d**），而AMD的I/O虚拟化技术规范为“**AMD\-Vi**”（也叫作**IOMMU**）。
 
@@ -69,7 +69,7 @@ KVM虚拟机支持将宿主机中的**PCI**、**PCI\-E设备**附加到虚拟化
 
 尽管在使用**qemu命令**行进行设备分配时并**不直接检查中断重映射功能是否开启**，但是在通过**一些工具使用KVM时**（如**libvirt！！！**）默认**需要有中断重映射的功能支持**，才能使用VT\-d分配设备供客户机使用。
 
-## 1.3 VT\-d的3个缺点和解决方案
+## VT-d的3个缺点和解决方案
 
 不过，VT\-d也有自己的缺点，
 
@@ -84,13 +84,13 @@ KVM虚拟机支持将宿主机中的**PCI**、**PCI\-E设备**附加到虚拟化
 
 另外，**设备直接分配**还有一个**缺点**是，对于使用**VT\-d**直接分配了设备的客户机，其**动态迁移功能将会受限**，不过也可以用**热插拔**或**libvirt工具**等方式来缓解这个问题，详细内容将在8.1.5节介绍。
 
-# 2 VFIO简介
+# VFIO简介
 
 在上一版中，VT\-d部分依然是以**pci\-stub模块**为例讲解的。
 
 **Kernel 3.10**发布，**VFIO**正式被引入，取代了原来的pci\-stub的VT\-d方式。
 
-## 2.1 VFIO相对于pci\-stub的改进
+## VFIO相对于pci-stub的改进
 
 与Legacy KVM Device Assignment（使用**pci\-stub driver**）相比，VFIO（Virtual Function IO￼）最大的改进就是**隔离了设备之间的DMA和中断！！！**，以及对**IOMMU Group！！！的支持**，从而有了更好的安全性。
 
@@ -102,11 +102,11 @@ IOMMU Group可以认为是**对PCI设备的分组**，**每个group**里面的**
 
 本书后续就以VFIO为例讲解VT\-d。
 
-# 3 VT\-d环境配置
+# VT-d环境配置
 
 在KVM中使用VT\-d技术进行设备直接分配，需要以下几方面的环境配置。
 
-## 3.1 硬件支持和BIOS设置
+## 硬件支持和BIOS设置
 
 目前市面上的**x86硬件平台**基本都**支持VT\-d**，包括服务器平台Xeon以及桌面级的酷睿系列。
 
@@ -114,15 +114,15 @@ IOMMU Group可以认为是**对PCI设备的分组**，**每个group**里面的**
 
 ![2019-05-15-09-02-49.png](./images/2019-05-15-09-02-49.png)
 
-## 3.2 宿主机内核的配置
+## 宿主机内核的配置
 
 在**宿主机系统**中，内核也需要配置相应的选项。
 
-### 3.2.1 VT\-d相关内核编译选项以及启动参数
+### VT-d相关内核编译选项以及启动参数
 
 在RHEL 7自带的Kernel config中，也都已经使这些类似的配置**处于打开状态**。
 
-```
+```conf
 CONFIG_GART_IOMMU=y         #AMD平台相关￼
 # CONFIG_CALGARY_IOMMU is not set      #IBM平台相关￼
 CONFIG_IOMMU_HELPER=y￼
@@ -152,13 +152,13 @@ CONFIG_DMAR_FLOPPY_WA=y￼
 CONFIG_INTR_REMAP=y
 ```
 
-### 3.2.2 VFIO相关内核编译选项
+### VFIO相关内核编译选项
 
 另外，为了配合接下来的第3步设置（用于**隐藏设备**），还需要配置**vfio\-pci**这个内核模块，相关的内核配置选项如下。
 
 在RHEL 7**默认内核**中，都将**CONFIG\_KVM\_VFIO配置为y**（直接编译到内核），其他的功能配置为模块（m）。
 
-```
+```conf
 CONFIG_VFIO_IOMMU_TYPE1=m￼
 CONFIG_VFIO=m￼
 CONFIG_VFIO_NOIOMMU=y         #支持用户空间的VFIO框架￼
@@ -169,7 +169,7 @@ CONFIG_VFIO_PCI_INTX=y￼
 CONFIG_KVM_VFIO=y
 ```
 
-### 3.2.3 系统检查
+### 系统检查
 
 在启动宿主机系统（这里需要手动修改grub）￼后，可以通过内核的打印信息来检查VT\-d是否处于打开可用状态，如下所示：
 
@@ -222,7 +222,7 @@ CONFIG_KVM_VFIO=y
 
 如果**只有“DMAR：IOMMU enabled”输出**，则需要**检查BIOS中VT\-d**是否已打开。
 
-## 3.3 在宿主机中隐藏设备
+## 在宿主机中隐藏设备
 
 使用vfio\_pci这个内核模块来对需要分配给客户机的设备进行隐藏
 
@@ -242,7 +242,7 @@ bind  module  new_id  remove_id  uevent  unbind
 
 如果**vfio\_pci**已**被编译到内核**而**不是作为module**，则**仅需最后一个命令**来检查/**sys/bus/pci/drivers/vfio\-pci**/目录是否存在即可。
 
-2）查看**设备的vendor ID和device ID**，如下所示（假设此设备的BDF为03：10.3）：
+2）查看**设备的vendor ID和device ID**，如下所示(假设此设备的BDF为`03：10.3`)：
 
 ```
 [root@kvm-host ~]# lspci -s 03:10.3 -Dn￼
@@ -565,7 +565,7 @@ qemu-system-x86_64: -device vfio-pci,host=03:10.3,addr=08: Device initialization
 
 除了在客户机启动时就分配**直接分配设备**之外，QEUM/KVM还支持设备的**热插拔（hot\-plug**），在客户机**运行时！！！添加**所需的**直接！！！分配设备**，这需要在QEMU monitor中运行相应的命令，相关内容将在6.3节中详细介绍。
 
-# 4 VT\-d操作示例
+# 4 VT-d操作示例
 
 ## 4.1 网卡直接分配
 
