--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
@@ -12,7 +12,7 @@
 - [4. 安装virtio驱动](#4-安装virtio驱动)
   - [4.1. Linux客户机中的virtio驱动](#41-linux客户机中的virtio驱动)
     - [4.1.1. virtio相关内核配置](#411-virtio相关内核配置)
-    - [4.1.2. 4.1.2 virtio内核模块](#412-412-virtio内核模块)
+    - [4.1.2. virtio内核模块](#412-virtio内核模块)
   - [4.2. Windows客户机中的virtio驱动](#42-windows客户机中的virtio驱动)
 - [5. 使用virtio\_balloon](#5-使用virtio_balloon)
   - [5.1. ballooning简介](#51-ballooning简介)
@@ -158,7 +158,7 @@ CONFIG_NET_9P_VIRTIO=m
 /lib/modules/3.10.0-957.12.2.el7.x86_64/kernel/drivers/virtio/virtio_ring.ko.xz
 ```
 
-### 4.1.2. 4.1.2 virtio内核模块
+### 4.1.2. virtio内核模块
 
 在一个**正在使用virtio\_net网络前端驱动**的KVM**客户机**中，已自动加载的virtio相关模块如下：
 
