--- Auto-Git Commit ---

--- a/Linux/Debug/编译模块.md
+++ b/Linux/Debug/编译模块.md
@@ -40,6 +40,8 @@ drwxr-xr-x 22 root root 4096 Nov 29 11:02 3.10.0-327.10.1.el7.x86_64
 drwxr-xr-x 24 root root 4096 Nov 29 10:47 5.4.0
 ```
 
+注: 可以放在任何目录下, 但是一旦编译了系统后就不能再动这部分代码
+
 然后进入`/usr/src/kernels/5.4.0`编译安装内核
 
 ```
@@ -98,7 +100,7 @@ ln -snf /usr/src/kernels/`uname -r` /lib/modules/`uname -r`/build
 # 编译
 
 ```
-make -j8 CONFIG_KVM=m CONFIG_KVM_INTEL=m -C `pwd` M=`pwd`/arch/x86/kvm/ modules
+make -j8 CONFIG_KVM=m CONFIG_KVM_INTEL=m -C /lib/modules/`uname -r`/build M=`pwd`/arch/x86/kvm/ modules
 ```
 
 ```
