--- a/Virtualization/KVM/4. 内存虚拟化/1. 内存虚拟化及其实现.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 内存虚拟化及其实现.md
@@ -6,8 +6,8 @@
 - [概述](#概述)
 - [客户机物理地址空间](#客户机物理地址空间)
 - [影子页表](#影子页表)
-  - [3.1 影子页表异常处理机制](#31-影子页表异常处理机制)
-- [4 EPT页表](#4-ept页表)
+  - [影子页表异常处理机制](#影子页表异常处理机制)
+- [EPT页表](#ept页表)
 
 <!-- /code_chunk_output -->
 
@@ -63,7 +63,7 @@
 
 当**客户机切换进程**时，**客户机操作系统**会把**待切换进程的页表基址载入 CR3**，而 KVM 将会**截获这一特权指令**，进行新的处理，也即在**哈希表**中找到与**此页表基址**对应的**影子页表基址**，载入**客户机 CR3**，使**客户机在恢复运行**时 CR3 实际指向的是**新切换进程对应的影子页表**。
 
-## 3.1 影子页表异常处理机制
+## 影子页表异常处理机制
 
 在通过**影子页表**进行**寻址**的过程中，有**两种原因**会引起**影子页表的缺页异常**，一种是由**客户机本身所引起的缺页异常**，具体来说就是客户机所访问的**客户机页表项存在位 (Present Bit) 为 0**，或者写一个**只读的客户机物理页**，再者所访问的**客户机虚拟地址无效**等。另一种异常是由**客户机页表**和**影子页表不一致**引起的异常。
 
@@ -77,7 +77,7 @@
 
 因此，Intel 的 EPT(Extent Page Table) 技术和 AMD 的 NPT(Nest Page Table) 技术都对内存虚拟化提供了硬件支持。这两种技术原理类似，都是在**硬件层面**上实现客户机虚拟地址到宿主机物理地址之间的转换。下面就以 EPT 为例分析一下 KVM 基于硬件辅助的内存虚拟化实现。
 
-# 4 EPT页表
+# EPT页表
 
 EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机物理地址映射**的基础上，又引入了 **EPT 页表**来实现**客户机物理地址**到**宿主机物理地址**的另一次映射，这**两次地址映射**都是由**硬件自动完成**。
 
