--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -100,6 +100,7 @@ int main()
  |   |   |           |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
  |   |   |           |
  |   |   |           ├─ address_space_update_topology_pass()
+ |   |   |           |   └─ MEMORY_LISTENER_UPDATE_REGION(,, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
  |   |   |           |   └─ kvm_region_add()        // region_add 对应的回调实现
  |   |   |           |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
  |   |   |           |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
