--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -90,8 +90,9 @@ int main()
  ├─ qemu_spice_init()                        // 初始化 SPICE
  ├─ cpu_exec_init_all()                      // 【2】初始化虚拟机的地址空间，主要是 QEMU 侧的内存布局
  |   ├─ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
- |   |   ├─ memory_region_init()             // 初始化 system_memory/io 这两个全局 MemoryRegion
- |   |   ├─memory_region_init(system_memory, NULL, "system", UINT64_MAX);()             // 初始化 system_memory/io 这两个全局 MemoryRegion
+ |   |   ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
+ |   |   ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
+ |   |   ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
  |   |   ├─ address_space_init(&address_space_memory, )          // address_space_memory->root = system_memory
  |   |   ├─ address_space_init()          // address_space_memory->root = system_memory
  |   |   |   └─ memory_region_update_topology()      // 为 MemoryRegion 生成 FlatView
