--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -92,7 +92,8 @@ int main()
  |   ├─ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
  |   |   ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
  |   |   ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
- |   |   |   └─ QTAILQ_INIT(&as->listeners)      // 初始化 AddressSpace 的 listeners
+ |   |   |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化 AddressSpace 的 listeners 链表
+ |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化 AddressSpace 的 listeners
  |   |   |   └─ memory_region_update_topology()      // 为 MemoryRegion 生成 FlatView
  |   |   |       └─ address_space_update_topology()  // as->current_map = new_view
  |   |   |           ├─ generate_memory_topology()   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
