--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -92,23 +92,23 @@ int main()
  |   ├─ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
  |   |   ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
  |   |   ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
- |   |   |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化 AddressSpace 的 listeners 链表
- |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化 AddressSpace 的 listeners
- |   |   |   └─ memory_region_update_topology()      // 为 MemoryRegion 生成 FlatView
- |   |   |       └─ address_space_update_topology()  // as->current_map = new_view
- |   |   |           ├─ generate_memory_topology()   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
- |   |   |           |   ├─ flatview_init(&view)
- |   |   |           |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |   |   |           |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
- |   |   |           |
- |   |   |           ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new)
- |   |   |           |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
- |   |   |           |   └─ kvm_region_add()        // region_add 对应的回调实现
- |   |   |           |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
- |   |   |           |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |   |   |           |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
- |   |   |           |
- |   |   |           └─ address_space_update_ioeventfds()   
+ |   |   |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化该 AddressSpace 的 listeners 链表
+ |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
+ |   |   |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
+ |   |   |   |   └─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // as->current_map = new_view
+ |   |   |   |        ├─ generate_memory_topology()   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
+ |   |   |   |        |   ├─ flatview_init(&view)
+ |   |   |   |        |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
+ |   |   |   |        |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   |   |        |
+ |   |   |   |        ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new)
+ |   |   |   |        |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
+ |   |   |   |        |   └─ kvm_region_add()        // region_add 对应的回调实现
+ |   |   |   |        |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
+ |   |   |   |        |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
+ |   |   |   |        |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
+ |   |   |   |        |
+ |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
  |   |   ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
  |   |   ├─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
