--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -95,19 +95,19 @@ int main()
  |   |   |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化该 AddressSpace 的 listeners 链表
  |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
  |   |   |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
- |   |   |   |   └─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // as->current_map = new_view
- |   |   |   |        ├─ generate_memory_topology()   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
- |   |   |   |        |   ├─ flatview_init(&view)
- |   |   |   |        |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |   |   |   |        |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
- |   |   |   |        |
- |   |   |   |        ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new)
- |   |   |   |        |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
- |   |   |   |        |   └─ kvm_region_add()        // region_add 对应的回调实现
- |   |   |   |        |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
- |   |   |   |        |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |   |   |   |        |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
- |   |   |   |        |
+ |   |   |   |   ├─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // 获取as指向的mr 
+ |   |   |   |   ├─ generate_memory_topology(physmr)   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
+ |   |   |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
+ |   |   |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
+ |   |   |   |   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   |   |   └─ address_space_set_flatview(as);
+ |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new)
+ |   |   |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
+ |   |   |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
+ |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
+ |   |   |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
+ |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
+ |   |   |   |       |
  |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
  |   |   ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
